RMG_backup.log
Global RMG Settings:
   database.directory   = /Users/belinda/Code/RMG-database/input (Default, relative to RMG-Py source code)
RMG execution initiated at Wed Feb 10 14:34:36 2016

#########################################################
# RMG-Py - Reaction Mechanism Generator in Python       #
# Version: 1.0.2                                        #
# Authors: RMG Developers (rmg_dev@mit.edu)             #
# P.I.s:   William H. Green (whgreen@mit.edu)           #
#          Richard H. West (r.west@neu.edu)             #
# Website: http://reactionmechanismgenerator.github.io/ #
#########################################################

The current git HEAD is:
	8a1c44160a23dcee24d066072f66e3f36a0cd5f4
	Mon Feb 1 17:22:20 2016 -0500

Reading input file "/Users/belinda/Code/RMG-Py/examples/rmg/silane/input.py"...
# Data sources
database(
    thermoLibraries = ['SiliconHydrideLibrary', 'primaryThermoLibrary'],
    reactionLibraries = [('Silicon_Giunta_1990', False), ('DolletSi2H4', False)],
    seedMechanisms = [],
    kineticsDepositories = ['training'],
    kineticsFamilies = ['R_Recombination', 'Silylene_Insertion', 'Silylene_to_Silene', 'H_Abstraction'],
    kineticsEstimator = 'rate rules',
)

# List of species
species(
    label='SiH4',
    reactive=True,
    structure=SMILES("[SiH4]")
)

species(
    label='Ar',
    reactive=False,
    structure=SMILES("[Ar]")
)

species(
    label='SiH2',
    reactive=True,
    structure=adjacencyList("""
1 Si u0 p1 c0 {2,S} {3,S}
2 H u0 p0 c0 {1,S}
3 H u0 p0 c0 {1,S}
"""}

# Reaction systems
simpleReactor(
    temperature=(913,'K'),
    pressure=(39000,'Pa'),
    initialMoleFractions={
        "SiH4": 0.0008,  
	"Ar": 0.9992,  
    },
    terminationConversion={
        'SiH4': 0.9,
    },
    terminationTime=(1, 's'),
    sensitivity=['SiH4', 'SiH2'],
    sensitivityThreshold=0.001,
)

simulator(
    atol=1e-16,
    rtol=1e-8,
)

model(
    toleranceKeepInEdge=0.0,
    toleranceMoveToCore=1e-8,
    toleranceInterruptSimulation=5e-8,
    maximumEdgeSpecies=100000
)

#pressureDependence(
#    method='modified strong collision',
#    maximumGrainSize=(0.5,'kcal/mol'),
#    minimumNumberOfGrains=250,
#    temperatures=(300,2000,'K',8),
#    pressures=(0.01,20,'bar',5),
#    interpolation=('Chebyshev', 6, 4),
#)

options(
    units='si',
    saveRestartPeriod=None,
    generateOutputHTML=True,
    generatePlots=False,
    saveEdgeSpecies=True,
)

generatedSpeciesConstraints(
    maximumSiliconAtoms=6
)



Error: The input file "/Users/belinda/Code/RMG-Py/examples/rmg/silane/input.py" was invalid:
Error: invalid syntax (input.py, line 31)
Traceback (most recent call last):
  File "/Users/belinda/Code/RMG-Py/rmgpy/rmg/input.py", line 366, in readInputFile
    exec f in global_context, local_context
  File "/Users/belinda/Code/RMG-Py/examples/rmg/silane/input.py", line 31
    structure=adjacencyList("""
1 Si u0 p1 c0 {2,S} {3,S}
2 H u0 p0 c0 {1,S}
3 H u0 p0 c0 {1,S}
"""}
                              
                         
                  
                  
    ^
SyntaxError: invalid syntax
